comment overflow fixed

--- a/react-app/src/components/VideoPage/VideoPage.css
+++ b/react-app/src/components/VideoPage/VideoPage.css
@@ -84,6 +84,8 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    word-break: break-word;
+        max-width: 40rem;;
 }
 
 
